app/components/Offer/index.module.scss
.offer {
  max-width: 1190px;
  height: 100vh;
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: relative;

  .text {
    width: 55%;
    font-weight: 500;
    font-size: 18px;
    line-height: 40px;
    max-width: 540px;
    padding: 0 0 0 3.5vw;
    opacity: 0;
    letter-spacing: 1px;
    animation-duration: 1000ms;

    h2 {
      font-weight: 700;
      font-size: 52px;
      line-height: 65px;
      margin: 15px 0 25px;
      letter-spacing: 3px;

      span {
        display: block;
        margin: 12px 0 0;
        font-size: 82px;
        transition: color 200ms ease-in;
      }
    }
  }

  .menuBlock {
    max-width: 500px;
    max-height: 500px;
    text-align: right;
    width: 100%;
    height: 100%;
    position: relative;

    .menuShadow {
      width: 120%;
      height: 120%;
      position: absolute;
      left: 48%;
      top: -9%;
      background: #eff1f3;
      opacity: 0;
      animation-delay: 500ms;
    }
  }

  .menuWrapper {
    max-width: 473px;
    width: 100%;
    max-height: 473px;
    transform: scale(0);
    background: #2d2d2d;
    padding: 123px 84px 130px 138px;
    margin: 60px 0 0 82px;
    position: relative;
    will-change: box-shadow;
    overflow: hidden;
    transition: background-color 700ms ease;

    &:before {
      position: absolute;
      content: "";
      top: -10rem;
      left: -10rem;
      width: calc(100% + 20rem);
      height: calc(100% + 20rem);
      opacity: 0;
      pointer-events: none;
      will-change: opacity;
      background: url("/noise.png") 10% center;
      transition: opacity 0.26s ease-out 0s;
      animation: bg-animation 1s steps(2) 0s infinite normal none running;
    }

    &:hover:before {
      opacity: 0.06;
    }

    .menu {
      animation-delay: 250ms;
      opacity: 0;

      a {
        display: block;
        font-size: 20px;
        line-height: 40px;
        color: #fefefe;
        text-transform: uppercase;
        letter-spacing: 1px;

        &.active,
        &:hover {
          font-weight: 700;
        }
      }
    }
  }

  .offerCircle {
    position: absolute;
    width: 661px;
    height: 661px;
    left: calc(-100vw / 2);
    top: calc(50% - 661px / 2);
    transform: translateX(0);
    border-radius: 100%;

    background: #f9f9f9;
    box-shadow: rgba(0, 0, 0, 0.3) -20px 0px 70px 10px;
    transition: all 0.2s ease 0s;
    transform: rotate(0deg);
    border-radius: 50%;
    animation: spin 2s linear infinite;

    &.circleIn {
      animation: spin 2s linear infinite, circleMoveIn 600ms forwards linear;
    }

    &.circleOut {
      animation: spin 2s linear infinite, circleMoveOut 600ms forwards linear;
    }

    &:hover {
      animation: spin 2s linear infinite, morph 1s linear infinite;
    }
  }
}

@keyframes circleMoveIn {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(20px);
  }
}

@keyframes circleMoveOut {
  from {
    transform: translateX(20px);
  }
  to {
    transform: translateX(0);
  }
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@keyframes morph {
  0%,
  to {
    border-radius: 40% 60% 70% 30%/40% 40% 60% 50%;
  }

  34% {
    border-radius: 70% 30% 50% 50%/30% 30% 70% 70%;
  }

  67% {
    border-radius: 100% 60% 60% 100%/100% 100% 60% 60%;
  }
}

.web {
  .openingShadow,
  .menuWrapper {
    background: #ffce21;
  }
  h2 {
    span {
      color: #ffce21;
    }
  }
  .offerCircle {
    box-shadow: rgba(255, 207, 38, 0.6) -20px 0px 70px 10px;
  }
}

.mobile {
  .openingShadow,
  .menuWrapper {
    background: #36a900;
  }
  h2 {
    span {
      color: #36a900;
    }
  }
  .offerCircle {
    box-shadow: rgba(54, 169, 0, 0.6) -20px 0px 70px 10px;
  }
}

.consulting {
  .openingShadow,
  .menuWrapper {
    background: #5865f2;
  }
  h2 {
    span {
      color: #5865f2;
    }
  }
  .offerCircle {
    box-shadow: rgba(88, 101, 242, 0.6) -20px 0px 70px 10px;
  }
}

.services {
  .openingShadow,
  .menuWrapper {
    background: #2663ff;
  }
  h2 {
    span {
      color: #2663ff;
    }
  }
  .offerCircle {
    box-shadow: rgba(38, 99, 255, 0.6) -20px 0px 70px 10px;
  }
}

.cloud {
  .openingShadow,
  .menuWrapper {
    background: #00a8f0;
  }
  h2 {
    span {
      color: #00a8f0;
    }
  }
  .offerCircle {
    box-shadow: rgba(0, 168, 240, 0.6) -20px 0px 70px 10px;
  }
}

.design {
  .openingShadow,
  .menuWrapper {
    background: #f2586a;
  }
  h2 {
    span {
      color: #f2586a;
    }
  }
  .offerCircle {
    box-shadow: rgba(242, 88, 106, 0.6) -20px 0px 70px 10px;
  }
}

@keyframes bg-animation {
  0% {
    transform: translate(0, 0);
  }
  10% {
    transform: translate(-5%, -5%);
  }
  20% {
    transform: translate(-10%, 5%);
  }
  30% {
    transform: translate(5%, -10%);
  }
  40% {
    transform: translate(-5%, 15%);
  }
  50% {
    transform: translate(-10%, 5%);
  }
  60% {
    transform: translate(15%, 0);
  }
  70% {
    transform: translate(0, 10%);
  }
  80% {
    transform: translate(-15%, 0);
  }
  90% {
    transform: translate(10%, 5%);
  }
  100% {
    transform: translate(5%, 0);
  }
}

.offer .menuBlock .webShadow {
  left: 48%;
  top: -15%;
  background: rgba(255, 207, 38, 0.24);
  opacity: 0;
  animation: 700ms webShadow forwards ease-in-out;
  animation-delay: 500ms;
}

@keyframes webShadow {
  0% {
    transform: translateX(-50vw);
    width: 0;
    opacity: 1;
  }
  100% {
    transform: translateX(0);
    width: 120vw;
    opacity: 1;
  }
}

.offer .menuBlock .mobileShadow {
  width: 0;
  height: 0;
  left: 48%;
  top: -15%;
  background: rgba(199, 229, 185, 1);
  opacity: 1;
  animation: 1100ms mobileShadow forwards ease-in-out;
  animation-delay: 500ms;
}

@keyframes mobileShadow {
  0% {
    width: 0;
    height: 0;
    transform: translateX(-100px);
  }
  100% {
    width: 120vw;
    height: 120%;
    transform: translateX(0);
  }
}

.offer .menuBlock .consultingShadow {
  width: 0;
  height: 120%;
  left: 30%;
  top: -45%;
  background: rgba(88, 101, 242, 0.26);
  opacity: 1;
  animation: 900ms consultingShadow forwards ease-in-out;
  animation-delay: 500ms;
}

@keyframes consultingShadow {
  0% {
    width: 0;
  }
  100% {
    width: 100vw;
  }
}

.offer .menuBlock .servicesShadow {
  width: 50%;
  height: 0;
  left: 5%;
  top: 50%;
  background: #c6d5fa;
  opacity: 1;
  animation: 700ms servicesShadow forwards ease-in-out;
  animation-delay: 500ms;
}

@keyframes servicesShadow {
  0% {
    height: 0;
    top: 80%;
  }
  100% {
    height: 200%;
    top: 50%;
  }
}

.offer .menuBlock .cloudShadow {
  width: 120vw;
  height: 120%;
  left: 48%;
  top: -200%;
  background: #d1effb;
  opacity: 1;
  animation: 1100ms cloudShadow forwards ease-in-out;
  animation-delay: 500ms;
}

@keyframes cloudShadow {
  0% {
    top: -200%;
  }
  100% {
    top: -1%;
  }
}

.offer .menuBlock .designShadow {
  width: 150vw;
  height: 0;
  left: 20%;
  top: 60%;
  background: #f8d0d5;
  opacity: 1;
  animation: 800ms designShadow forwards ease-in-out;
  animation-delay: 500ms;

  &:before {
    content: "";
    width: 100%;
    height: 100%;
    background: #f8d0d5;
    position: absolute;
    left: 0;
    bottom: 102%;
    animation: 2s designShadowTwo forwards linear;
    animation-delay: 1500ms;
  }
}

@keyframes designShadow {
  0% {
    height: 0;
  }
  100% {
    height: 150%;
  }
}

@keyframes designShadowTwo {
  0% {
    bottom: 102%;
  }
  100% {
    bottom: 400%;
  }
}

.openingShadow {
  width: 100%;
  height: 120%;
  position: absolute;
  right: -70%;
  top: -9%;
  background: #eff1f3;
  opacity: 0;

  &.animate {
    animation: openingShadow 1500ms forwards linear;
  }
}

@keyframes openingShadow {
  0% {
    opacity: 0;
    width: 5vw;
    filter: grayscale(1);
  }
  25% {
    width: 70vw;
    right: 5vw;
    opacity: 0.5;
  }
  50% {
    width: 5vw;
    right: 70vw;
    opacity: 0.5;
  }
  75% {
    width: 70vw;
    right: -70%;
    opacity: 1;
    filter: grayscale(0);
  }
  100% {
    width: 120%;
    opacity: 0;
  }
}

@media (max-width: 1299px) {
  .offerCircle {
    display: none;
  }
}

@media (max-width: 999px) {
  .offer {
    flex-direction: column;
    justify-content: flex-start;
    gap: 30px;
    height: 100vh;

    .text {
      width: 100%;
      font-size: 16px;
      line-height: 26px;
      letter-spacing: 0;
      padding: 0 20px;

      h2 {
        font-size: 36px;
        line-height: 46px;
        margin: 40px 0 15px;

        span {
          font-size: 46px;
          margin: 0;
        }
      }
    }

    .menuWrapper {
      margin-top: 50px;
      margin-left: 0;
      width: 80%;
      max-width: 400px;
      padding: 28px 32px 28px 20px;
      animation: none;
      transform: scale(1);

      .menu {
        a {
          font-size: 18px;
          line-height: 34px;
        }
      }
    }

    .menuBlock {
      height: auto;
    }
  }
  .offer .menuBlock .menuShadow {
    animation: none;
    opacity: 1;
    width: 90%;
    height: 100vh;
    top: 0;
    right: initial;
    left: 40%;
    transition: background-color 1s linear;

    &:before {
      display: none;
    }
  }
  .openingShadow {
    display: none;
  }
}

